# multi-agent-code-gen-and-execution

./: .env  .gitignore  README.md  config.yaml  globals.py  iam_policy.json  pyproject.toml  run_multi_agent.ipynb
0_home_network_assistant/: 0_home_network_assistant_create_kb.ipynb  1_home_network_assistant_create_agent.ipynb  Dockerfile  build_and_push.sh  home_network_agent_lambda_function.py  home_network_assistant_crewAI.ipynb  home_network_kb_lambda_function.py
0_home_network_assistant/generated_code/: generated_code_1739220350.py
0_home_network_assistant/path_to_save_vector_store/: index.faiss  index.pkl
1_doorbell_assistant/: 0_doorbell_assistant_create_kb.ipynb  1_doorbell_assistant_create_agent.ipynb  doorbell_agent_lambda_function.py  doorbell_assistant_crewAI.ipynb  doorbell_kb_lambda_function.py
1_doorbell_assistant/generated_code/: generated_code_1739230231.py  generated_code_1739230379.py  generated_code_1739230481.py  generated_code_1739230541.py  generated_code_1739230737.py
2_home_networking_doorbell_config_multi_agent/: multi_agent_collaborator.ipynb
agent_instructions/: doorbell_agent_instructions.txt  home_network_agent_instructions.txt
code_gen_prompts/: doorbell_code_generation_prompt.txt  home_network_code_generation_prompt.txt
data/: doorbell_openapi_spec.json  home_network_openapi_spec.json
utils/: bedrock_agent_helper.py  knowledge_base_helper.py  utils.py
