[project]
name = "mac-code-gen-and-execution"
version = "0.1.0"
description = "Multi-Agent Home Automation Management System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "awscli>=1.37.9",
    "boto3>=1.36.9",
    "botocore>=1.36.9",
    "events>=0.5",
    "ipykernel>=6.29.5",
    "jupyter-client>=8.6.3",
    "opensearch-py>=2.8.0",
    "retrying>=1.3.4",
    "rich>=13.9.4",
    "termcolor>=2.5.0",
    "pyzmq",
    "python-dotenv",
    "matplotlib"
]
